patient model for mongo db
