# swagger/swagger.yaml
@@ -181,6 +181,45 @@ paths:
         default:
           description: "successful operation"
 
+ /patients:
+   get:
+     operationId: 'getAllPatients'
+     description: 'Returns all patients'
+     produces:
+        - application/json
+     tags:
+        - 'patient'
+     responses:
+      "200":
+       description: 'A list of all patients.'
+       schema:
+        type: 'array'
+        items:
+         $ref: '#/definitions/Patient'
+      default:
+       description: 'Unexpected error'
+       schema:
+         $ref: '#/definitions/Error'
+ /patient:
+     post:
+       tags:
+       - 'patient'
+       summary: "Create Patient"
+       description: "Create a Patient."
+       operationId: "addPatient"
+       produces:
+       - "application/json"
+       parameters:
+       - in: "body"
+         name: "body"
+         description: "Created patent object"
+         required: true
+         schema:
+           $ref: "#/definitions/Patient"
+       responses:
+         default:
+           description: "successful operation"
+
 definitions:
   User:
     type: "object"
@@ -193,6 +232,19 @@ definitions:
          type: "string"
        password:
          type: "string"
+  Patient:
+    type: "object"
+    properties:
+        _id:
+          type: "string"
+        name:
+          type: "string"
+        rasse:
+          type: "string"
+        eigentuemer_vorname:
+          type: "string"
+        eigentuemer_nachname:
+          type: "string"
   Error:
     type: object
     properties:
